<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="E_LogToFile_State" Id="{122afdcd-4a7f-402c-90c3-920b3a8482ef}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_LogToFile_State :
(
	IDLE, 
	PREPARE_DATA, 
	OPEN_FILE, 
	WRITE_TO_FILE, 
	CLOSE_FILE, 
	RESET
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>